--- a/com.test.seleniumFlow/pom.xml
+++ b/com.test.seleniumFlow/pom.xml
@@ -44,7 +44,7 @@
 				<configuration>
 					<suiteXmlFiles>
 						<suiteXmlFile>
-							testng.xml
+							testng_new.xml
 						</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
